--- a/data/interfaces/control_action_dialog.ui
+++ b/data/interfaces/control_action_dialog.ui
@@ -4,7 +4,7 @@
   <!-- interface-name clean_dialog.ui -->
   <requires lib="gtk" version="4.18"/>
   <requires lib="libadwaita" version="1.7"/>
-  <template class="ENABLE_UNIT_DIALOG" parent="AdwWindow">
+  <template class="ControlAction_DIALOG" parent="AdwWindow">
     <property name="content">
       <object class="AdwToolbarView">
         <property name="content">
@@ -16,7 +16,7 @@
             <property name="orientation">vertical</property>
             <property name="spacing">5</property>
             <child>
-              <object class="AdwPreferencesGroup">
+              <object class="AdwPreferencesGroup" id="first_group">
                 <property name="margin-bottom">5</property>
                 <property name="margin-end">5</property>
                 <property name="margin-start">5</property>
@@ -76,7 +76,7 @@
               </object>
             </child>
             <child>
-              <object class="AdwPreferencesGroup">
+              <object class="AdwPreferencesGroup" id="after_action_group">
                 <property name="margin-bottom">5</property>
                 <property name="margin-end">5</property>
                 <property name="margin-start">5</property>
@@ -108,12 +108,12 @@
                   </object>
                 </child>
                 <child>
-                  <object class="GtkButton" id="enable_button">
+                  <object class="GtkButton" id="send_action_button">
                     <property name="css-classes">suggested-action</property>
                     <property name="halign">end</property>
                     <property name="label" translatable="yes" context="enable unit file" comments="button">Enable</property>
                     <property name="sensitive">False</property>
-                    <signal name="clicked" handler="enable_unit_file_button_clicked" swapped="yes"/>
+                    <signal name="clicked" handler="send_action_button_clicked" swapped="yes"/>
                   </object>
                 </child>
               </object>
@@ -124,9 +124,7 @@
         <child type="top">
           <object class="AdwHeaderBar">
             <property name="title-widget">
-              <object class="AdwWindowTitle">
-                <property name="title" translatable="yes" context="enable unit file" comments="dialog title">Enable Unit File</property>
-              </object>
+              <object class="AdwWindowTitle" id="window_title"/>
             </property>
           </object>
         </child>
