--- a/data/interfaces/unit_properties_selector.ui
+++ b/data/interfaces/unit_properties_selector.ui
@@ -4,11 +4,39 @@
 -->
 <interface>
   <!-- interface-name unit_list_filter.ui -->
-  <requires lib="gtk" version="4.16"/>
-  <requires lib="libadwaita" version="1.6"/>
+  <requires lib="gtk" version="4.18"/>
+  <requires lib="libadwaita" version="1.7"/>
   <template class="UNIT_PROPERTIES_SELECTOR_DIALOG" parent="AdwWindow">
     <property name="content">
       <object class="AdwToolbarView">
+        <property name="content">
+          <object class="GtkScrolledWindow">
+            <child>
+              <object class="GtkColumnView" id="properties_selector">
+                <child>
+                  <object class="GtkColumnViewColumn" id="interface_column">
+                    <property name="id">interface</property>
+                    <property name="resizable">True</property>
+                    <property name="title">Interface</property>
+                  </object>
+                </child>
+                <child>
+                  <object class="GtkColumnViewColumn" id="property_column">
+                    <property name="id">property</property>
+                    <property name="resizable">True</property>
+                    <property name="title">Property</property>
+                  </object>
+                </child>
+                <child>
+                  <object class="GtkColumnViewColumn" id="signature_column">
+                    <property name="id">signature</property>
+                    <property name="title">Signature</property>
+                  </object>
+                </child>
+              </object>
+            </child>
+          </object>
+        </property>
         <child type="top">
           <object class="AdwHeaderBar">
             <property name="title-widget">
@@ -20,7 +48,8 @@
         </child>
       </object>
     </property>
-    <property name="default-height">400</property>
+    <property name="default-height">600</property>
+    <property name="default-width">800</property>
     <property name="title">Filter</property>
   </template>
 </interface>
