fine tune properties

--- a/data/interfaces/unit_properties_selector.ui
+++ b/data/interfaces/unit_properties_selector.ui
@@ -15,6 +15,7 @@
               <object class="GtkColumnView" id="properties_selector">
                 <child>
                   <object class="GtkColumnViewColumn" id="interface_column">
+                    <property name="fixed-width">280</property>
                     <property name="id">interface</property>
                     <property name="resizable">True</property>
                     <property name="title">Interface</property>
@@ -22,6 +23,7 @@
                 </child>
                 <child>
                   <object class="GtkColumnViewColumn" id="property_column">
+                    <property name="fixed-width">350</property>
                     <property name="id">property</property>
                     <property name="resizable">True</property>
                     <property name="title">Property</property>
@@ -31,6 +33,13 @@
                   <object class="GtkColumnViewColumn" id="signature_column">
                     <property name="id">signature</property>
                     <property name="title">Signature</property>
+                  </object>
+                </child>
+                <child>
+                  <object class="GtkColumnViewColumn" id="access_column">
+                    <property name="id">access</property>
+                    <property name="resizable">True</property>
+                    <property name="title">Access</property>
                   </object>
                 </child>
               </object>
@@ -49,7 +58,7 @@
       </object>
     </property>
     <property name="default-height">600</property>
-    <property name="default-width">800</property>
+    <property name="default-width">1100</property>
     <property name="title">Filter</property>
   </template>
 </interface>
