--- a/data/interfaces/unit_properties_selector.ui
+++ b/data/interfaces/unit_properties_selector.ui
@@ -6,45 +6,56 @@
   <!-- interface-name unit_list_filter.ui -->
   <requires lib="gtk" version="4.18"/>
   <requires lib="libadwaita" version="1.7"/>
-  <template class="UNIT_PROPERTIES_SELECTOR_DIALOG" parent="AdwWindow">
+  <template class="UnitPropertiesSelectorDialog" parent="AdwWindow">
     <property name="content">
       <object class="AdwToolbarView">
         <property name="content">
-          <object class="GtkScrolledWindow">
-            <property name="vexpand">True</property>
-            <child>
-              <object class="GtkColumnView" id="properties_selector">
+          <object class="GtkPaned">
+            <property name="end-child">
+              <object class="UnitPropertiesSelection" id="unit_properties_selection"/>
+            </property>
+            <property name="position">600</property>
+            <property name="position-set">True</property>
+            <property name="shrink-start-child">False</property>
+            <property name="start-child">
+              <object class="GtkScrolledWindow">
+                <property name="vexpand">True</property>
                 <child>
-                  <object class="GtkColumnViewColumn" id="interface_column">
-                    <property name="fixed-width">280</property>
-                    <property name="id">interface</property>
-                    <property name="resizable">True</property>
-                    <property name="title">Interface</property>
-                  </object>
-                </child>
-                <child>
-                  <object class="GtkColumnViewColumn" id="property_column">
-                    <property name="fixed-width">350</property>
-                    <property name="id">property</property>
-                    <property name="resizable">True</property>
-                    <property name="title">Property</property>
-                  </object>
-                </child>
-                <child>
-                  <object class="GtkColumnViewColumn" id="signature_column">
-                    <property name="id">signature</property>
-                    <property name="title">Signature</property>
-                  </object>
-                </child>
-                <child>
-                  <object class="GtkColumnViewColumn" id="access_column">
-                    <property name="id">access</property>
-                    <property name="resizable">True</property>
-                    <property name="title">Access</property>
+                  <object class="GtkColumnView" id="properties_selector">
+                    <child>
+                      <object class="GtkColumnViewColumn" id="interface_column">
+                        <property name="fixed-width">280</property>
+                        <property name="id">interface</property>
+                        <property name="resizable">True</property>
+                        <property name="title">Interface</property>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="GtkColumnViewColumn" id="property_column">
+                        <property name="fixed-width">350</property>
+                        <property name="id">property</property>
+                        <property name="resizable">True</property>
+                        <property name="title">Property</property>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="GtkColumnViewColumn" id="signature_column">
+                        <property name="id">signature</property>
+                        <property name="title">Signature</property>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="GtkColumnViewColumn" id="access_column">
+                        <property name="id">access</property>
+                        <property name="resizable">True</property>
+                        <property name="title">Access</property>
+                      </object>
+                    </child>
                   </object>
                 </child>
               </object>
-            </child>
+            </property>
+            <property name="wide-handle">True</property>
           </object>
         </property>
         <child type="top">
