--- a/data/interfaces/unit_properties_selection.ui
+++ b/data/interfaces/unit_properties_selection.ui
@@ -14,38 +14,9 @@
     <child>
       <object class="GtkScrolledWindow">
         <property name="vexpand">True</property>
+        <property name="vexpand-set">True</property>
         <child>
-          <object class="GtkColumnView" id="properties_selection">
-            <child>
-              <object class="GtkColumnViewColumn" id="interface_column">
-                <property name="fixed-width">280</property>
-                <property name="id">interface</property>
-                <property name="resizable">True</property>
-                <property name="title">Interface</property>
-              </object>
-            </child>
-            <child>
-              <object class="GtkColumnViewColumn" id="property_column">
-                <property name="fixed-width">350</property>
-                <property name="id">property</property>
-                <property name="resizable">True</property>
-                <property name="title">Property</property>
-              </object>
-            </child>
-            <child>
-              <object class="GtkColumnViewColumn" id="signature_column">
-                <property name="id">signature</property>
-                <property name="title">Signature</property>
-              </object>
-            </child>
-            <child>
-              <object class="GtkColumnViewColumn" id="access_column">
-                <property name="id">access</property>
-                <property name="resizable">True</property>
-                <property name="title">Access</property>
-              </object>
-            </child>
-          </object>
+          <object class="GtkListView" id="properties_selection"/>
         </child>
       </object>
     </child>
