--- a/data/interfaces/unit_properties_selection_row.ui
+++ b/data/interfaces/unit_properties_selection_row.ui
@@ -14,6 +14,7 @@
         <property name="row-spacing">5</property>
         <child>
           <object class="GtkLabel">
+            <property name="css-classes">dim-label</property>
             <property name="label">Interface</property>
             <layout>
               <property name="column">0</property>
@@ -23,6 +24,7 @@
         </child>
         <child>
           <object class="GtkLabel">
+            <property name="css-classes">dim-label</property>
             <property name="label">Property</property>
             <layout>
               <property name="column">0</property>
@@ -42,6 +44,9 @@
         <child>
           <object class="GtkLabel" id="property_label">
             <property name="xalign">0.0</property>
+            <attributes>
+              <attribute name="weight" value="bold"/>
+            </attributes>
             <layout>
               <property name="column">1</property>
               <property name="row">1</property>
